[gd_scene load_steps=2 format=3 uid="uid://bfefmb3j5osdr"]

[ext_resource type="Script" path="res://Game/Menus/RichTextButton.gd" id="1_4yyuk"]

[node name="RichTextButton" type="Button"]
texture_filter = 1
offset_left = 188.0
offset_top = 120.0
offset_right = 317.0
offset_bottom = 146.0
flat = true
icon_alignment = 1
script = ExtResource("1_4yyuk")
hover_color = Color(0.702597, 0.703806, 0.707106, 1)
pressed_color = Color(0.215902, 0.215902, 0.215902, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -13.5
offset_right = 36.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
bbcode_enabled = true
text = "[outline_size=4][center][wave amp=20.0 freq=6.0 connected=1][color=base]Play[/color][/wave]"
scroll_active = false

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
